@@ -2,6 +2,8 @@
 
 	* info/session.c (incremental_search): Code after 'after_search' label
 	moved to start of loop.
+	'insert_and_search' label removed.  Use conditionals instead of goto.
+	Combine two conditionals handling C-g press.
 
 2014-08-08  Gavin Smith  <gavinsmith0123@gmail.com>
 
